Fix flexbox carousel on IE

--- a/resources/assets/less/pages/curriculum.less
+++ b/resources/assets/less/pages/curriculum.less
@@ -38,8 +38,12 @@
 		.caption {
 			color: #fff;
 			display: flex;
+			display: -ms-flexbox;
+			display: -webkit-flex;
 			flex-direction: column;
-			//align-items: center; IE fix
+			align-items: center;
+			/* Center horizontally IE */
+			-ms-flex-pack: center;
 			justify-content: center;
 			text-align: center;
 			padding: 20px 70px;
@@ -52,6 +56,7 @@
 
 			p {
 				font-size: @fontSizeMd;
+				width: 100%; //IE fix
 			}
 		}
 	}
